# EMPIRE-Libraries

./: CMakeLists.txt  Makefile
Eigen/: CMakeLists.txt
Eigen/src/Core/: CMakeLists.txt
Eigen/src/Eigen2Support/: CMakeLists.txt
Eigen/src/SVD/: CMakeLists.txt
clipper_ver6.1.3a/cpp/: CMakeLists.txt  Makefile  clipper.cpp  cmake_install.cmake  polyclipping.pc
